src/main/java/org/beast2/modelLanguage/parser/Beast2ModelLanguageParser.java
package org.beast2.modelLanguage.parser;// Generated from Beast2ModelLanguage.g4 by ANTLR 4.10.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Beast2ModelLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TILDE=1, EQUALS=2, SEMICOLON=3, COMMA=4, LPAREN=5, RPAREN=6, LBRACE=7, 
		RBRACE=8, LBRACKET=9, RBRACKET=10, DOT=11, AT=12, STAR=13, COLON=14, IMPORT=15, 
		REQUIRES=16, NEXUS=17, ALIGNMENT=18, BOOLEAN_LITERAL=19, IDENTIFIER=20, 
		INTEGER_LITERAL=21, FLOAT_LITERAL=22, STRING_LITERAL=23, LINE_COMMENT=24, 
		BLOCK_COMMENT=25, WS=26;
	public static final int
		RULE_program = 0, RULE_importStatement = 1, RULE_requiresStatement = 2, 
		RULE_importName = 3, RULE_pluginName = 4, RULE_statement = 5, RULE_annotation = 6, 
		RULE_annotationName = 7, RULE_annotationBody = 8, RULE_annotationParameter = 9, 
		RULE_variableDeclaration = 10, RULE_distributionAssignment = 11, RULE_expression = 12, 
		RULE_functionCall = 13, RULE_nexusFunction = 14, RULE_alignmentFunction = 15, 
		RULE_mapExpression = 16, RULE_mapEntry = 17, RULE_argumentList = 18, RULE_argument = 19, 
		RULE_argumentName = 20, RULE_argumentValue = 21, RULE_arrayLiteral = 22, 
		RULE_arrayElement = 23, RULE_className = 24, RULE_qualifiedName = 25, 
		RULE_identifier = 26, RULE_literal = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStatement", "requiresStatement", "importName", "pluginName", 
			"statement", "annotation", "annotationName", "annotationBody", "annotationParameter", 
			"variableDeclaration", "distributionAssignment", "expression", "functionCall", 
			"nexusFunction", "alignmentFunction", "mapExpression", "mapEntry", "argumentList", 
			"argument", "argumentName", "argumentValue", "arrayLiteral", "arrayElement", 
			"className", "qualifiedName", "identifier", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'~'", "'='", "';'", "','", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "'.'", "'@'", "'*'", "':'", "'import'", "'requires'", "'nexus'", 
			"'alignment'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TILDE", "EQUALS", "SEMICOLON", "COMMA", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACKET", "RBRACKET", "DOT", "AT", "STAR", "COLON", "IMPORT", 
			"REQUIRES", "NEXUS", "ALIGNMENT", "BOOLEAN_LITERAL", "IDENTIFIER", "INTEGER_LITERAL", 
			"FLOAT_LITERAL", "STRING_LITERAL", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Beast2ModelLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Beast2ModelLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Beast2ModelLanguageParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<RequiresStatementContext> requiresStatement() {
			return getRuleContexts(RequiresStatementContext.class);
		}
		public RequiresStatementContext requiresStatement(int i) {
			return getRuleContext(RequiresStatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT || _la==REQUIRES) {
				{
				setState(58);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IMPORT:
					{
					setState(56);
					importStatement();
					}
					break;
				case REQUIRES:
					{
					setState(57);
					requiresStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				statement();
				}
				}
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT || _la==IDENTIFIER );
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(Beast2ModelLanguageParser.IMPORT, 0); }
		public ImportNameContext importName() {
			return getRuleContext(ImportNameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Beast2ModelLanguageParser.SEMICOLON, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitImportStatement(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(IMPORT);
			setState(71);
			importName();
			setState(72);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequiresStatementContext extends ParserRuleContext {
		public TerminalNode REQUIRES() { return getToken(Beast2ModelLanguageParser.REQUIRES, 0); }
		public PluginNameContext pluginName() {
			return getRuleContext(PluginNameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Beast2ModelLanguageParser.SEMICOLON, 0); }
		public RequiresStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requiresStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterRequiresStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitRequiresStatement(this);
		}
	}

	public final RequiresStatementContext requiresStatement() throws RecognitionException {
		RequiresStatementContext _localctx = new RequiresStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_requiresStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(REQUIRES);
			setState(75);
			pluginName();
			setState(76);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportNameContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(Beast2ModelLanguageParser.DOT, 0); }
		public TerminalNode STAR() { return getToken(Beast2ModelLanguageParser.STAR, 0); }
		public ImportNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterImportName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitImportName(this);
		}
	}

	public final ImportNameContext importName() throws RecognitionException {
		ImportNameContext _localctx = new ImportNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			qualifiedName();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(79);
				match(DOT);
				setState(80);
				match(STAR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PluginNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(Beast2ModelLanguageParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(Beast2ModelLanguageParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(Beast2ModelLanguageParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(Beast2ModelLanguageParser.DOT, i);
		}
		public PluginNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pluginName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterPluginName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitPluginName(this);
		}
	}

	public final PluginNameContext pluginName() throws RecognitionException {
		PluginNameContext _localctx = new PluginNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pluginName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(IDENTIFIER);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(84);
				match(DOT);
				setState(85);
				match(IDENTIFIER);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public DistributionAssignmentContext distributionAssignment() {
			return getRuleContext(DistributionAssignmentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AT) {
					{
					{
					setState(91);
					annotation();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AT) {
					{
					{
					setState(98);
					annotation();
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(104);
				distributionAssignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(Beast2ModelLanguageParser.AT, 0); }
		public AnnotationNameContext annotationName() {
			return getRuleContext(AnnotationNameContext.class,0);
		}
		public AnnotationBodyContext annotationBody() {
			return getRuleContext(AnnotationBodyContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitAnnotation(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(AT);
			setState(108);
			annotationName();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(109);
				annotationBody();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationNameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public AnnotationNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterAnnotationName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitAnnotationName(this);
		}
	}

	public final AnnotationNameContext annotationName() throws RecognitionException {
		AnnotationNameContext _localctx = new AnnotationNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_annotationName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationBodyContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(Beast2ModelLanguageParser.LPAREN, 0); }
		public List<AnnotationParameterContext> annotationParameter() {
			return getRuleContexts(AnnotationParameterContext.class);
		}
		public AnnotationParameterContext annotationParameter(int i) {
			return getRuleContext(AnnotationParameterContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(Beast2ModelLanguageParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(Beast2ModelLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Beast2ModelLanguageParser.COMMA, i);
		}
		public AnnotationBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterAnnotationBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitAnnotationBody(this);
		}
	}

	public final AnnotationBodyContext annotationBody() throws RecognitionException {
		AnnotationBodyContext _localctx = new AnnotationBodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_annotationBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(LPAREN);
			setState(115);
			annotationParameter();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(116);
				match(COMMA);
				setState(117);
				annotationParameter();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationParameterContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(Beast2ModelLanguageParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AnnotationParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterAnnotationParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitAnnotationParameter(this);
		}
	}

	public final AnnotationParameterContext annotationParameter() throws RecognitionException {
		AnnotationParameterContext _localctx = new AnnotationParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_annotationParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			identifier();
			setState(126);
			match(EQUALS);
			setState(127);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(Beast2ModelLanguageParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Beast2ModelLanguageParser.SEMICOLON, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			className();
			setState(130);
			identifier();
			setState(131);
			match(EQUALS);
			setState(132);
			expression();
			setState(133);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DistributionAssignmentContext extends ParserRuleContext {
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode TILDE() { return getToken(Beast2ModelLanguageParser.TILDE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Beast2ModelLanguageParser.SEMICOLON, 0); }
		public DistributionAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distributionAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).enterDistributionAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Beast2ModelLanguageListener ) ((Beast2ModelLanguageListener)listener).exitDistributionAssignment(this);
		}
	}

	public final DistributionAssignmentContext distributionAssignment() throws RecognitionException {
		DistributionAssignmentContext _localctx = new DistributionAssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_distributionAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			className();
			setState(136);
			identifier();
			setState(137);
			match(TILDE);
			setState(138);
			expression();
			setState(139);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
